refactoring of document processing pipeline